Start game button styling Added further styling onto "start-btn" element 	-Adjusted "margin" 		-Replaced with "margin-top" 		-Equally spaces "start-btn" between the bottom of "player-select-panel" and "start-panel" elements 	-Added "width: 200px" 		-Prevents "start-btn" occupying all available space 	-Added "align-self: center" 		-Centers the "start-btn" relative to and within "player-select-panel" 	-Added "padding: 5px 0px;" 		-Adds top and bottom padding 		-Creates space around text content

--- a/project/style.css
+++ b/project/style.css
@@ -107,7 +107,10 @@ button:hover{
 }
 
 #start-btn {
-  margin: 10px;
+  margin-top: 15px;
+  width: 200px;
+  align-self: center;
+  padding: 5px 0px;
 }
 
 #rules {
